crates/bnfgen-syntax/tests/snapshots/lexical_snapshots__fixture_carriage_return_between_rules.snap
---
source: crates/bnfgen-syntax/tests/lexical_snapshots.rs
---
<input>
<a> ::= "x";\r
<b> ::= "y";\r
</input>
document
├── tokens
│   ├── 000..001 LAngle "<"
│   ├── 001..002 Id "a"
│   ├── 002..003 RAngle ">"
│   ├── 003..004 Whitespace " "
│   ├── 004..007 Def "::="
│   ├── 007..008 Whitespace " "
│   ├── 008..011 Str "\"x\""
│   ├── 011..012 Semi ";"
│   ├── 012..013 Invalid "\r"
│   ├── 013..014 Whitespace "\n"
│   ├── 014..015 LAngle "<"
│   ├── 015..016 Id "b"
│   ├── 016..017 RAngle ">"
│   ├── 017..018 Whitespace " "
│   ├── 018..021 Def "::="
│   ├── 021..022 Whitespace " "
│   ├── 022..025 Str "\"y\""
│   ├── 025..026 Semi ";"
│   ├── 026..027 Invalid "\r"
│   └── 027..028 Whitespace "\n"
├── errors
│   ├── 012..013 UnrecognizedInput
│   └── 026..027 UnrecognizedInput
└── rules
    ├── 000..012 a
    │   └── alt 008..011
    │       └── 008..011 Terminal "\"x\""
    └── 014..026 b
        └── alt 022..025
            └── 022..025 Terminal "\"y\""
