crates/bnfgen-syntax/tests/snapshots/lexical_snapshots__fixture_comment_at_eof.snap
---
source: crates/bnfgen-syntax/tests/lexical_snapshots.rs
---
<input>
<a> ::= "x"; // trailing note</input>
document
├── tokens
│   ├── 000..001 LAngle <
│   ├── 001..002 Id a
│   ├── 002..003 RAngle >
│   ├── 003..004 Whitespace  
│   ├── 004..007 Def ::=
│   ├── 007..008 Whitespace  
│   ├── 008..011 Str "x"
│   ├── 011..012 Semi ;
│   ├── 012..013 Whitespace  
│   └── 013..029 Comment // trailing note
├── errors
├── recovery
└── rules
    └── 000..012 a
        ├── 000..003 lhs <a>
        │   └── name 001..002 a
        └── alt 008..011
            └── 008..011 Terminal "x"
