crates/bnfgen-syntax/tests/snapshots/lexical_snapshots__fixture_comment_between_rules.snap
---
source: crates/bnfgen-syntax/tests/lexical_snapshots.rs
---
<input>
<a> ::= "x"; // mid-file
<b> ::= "y";
</input>
document
├── tokens
│   ├── 000..001 LAngle <
│   ├── 001..002 Id a
│   ├── 002..003 RAngle >
│   ├── 003..004 Whitespace  
│   ├── 004..007 Def ::=
│   ├── 007..008 Whitespace  
│   ├── 008..011 Str "x"
│   ├── 011..012 Semi ;
│   ├── 012..013 Whitespace  
│   ├── 013..024 Comment // mid-file
│   ├── 024..025 Whitespace
│   ├── 025..026 LAngle <
│   ├── 026..027 Id b
│   ├── 027..028 RAngle >
│   ├── 028..029 Whitespace  
│   ├── 029..032 Def ::=
│   ├── 032..033 Whitespace  
│   ├── 033..036 Str "y"
│   ├── 036..037 Semi ;
│   └── 037..038 Whitespace
├── errors
└── rules
    ├── 000..012 a
    │   └── alt 008..011
    │       └── 008..011 Terminal "x"
    └── 025..037 b
        └── alt 033..036
            └── 033..036 Terminal "y"
