crates/bnfgen-syntax/tests/snapshots/lexical_snapshots__fixture_complete_rule_before_incomplete_rule.snap
---
source: crates/bnfgen-syntax/tests/lexical_snapshots.rs
snapshot_kind: text
---
<input>
<first> ::= "ok";
<second> ::= <target
</input>
document
├── tokens
│   ├── 000..001 LAngle <
│   ├── 001..006 Id first
│   ├── 006..007 RAngle >
│   ├── 007..008 Whitespace  
│   ├── 008..011 Def ::=
│   ├── 011..012 Whitespace  
│   ├── 012..016 Str "ok"
│   ├── 016..017 Semi ;
│   ├── 017..018 Whitespace
│   ├── 018..019 LAngle <
│   ├── 019..025 Id second
│   ├── 025..026 RAngle >
│   ├── 026..027 Whitespace  
│   ├── 027..030 Def ::=
│   ├── 030..031 Whitespace  
│   ├── 031..032 LAngle <
│   ├── 032..038 Id target
│   └── 038..039 Whitespace
├── diagnostics
│   ├── 031..031 Missing(Alternative)
│   ├── 031..031 Missing(RuleTerminator)
│   ├── 038..038 Missing(NonTerminalClosingDelimiter)
│   ├── 038..038 Missing(Definition)
│   └── 038..038 Missing(RuleTerminator)
├── recovery
└── rules
    ├── 000..017 first [complete]
    │   ├── 000..007 lhs <first>
    │   │   ├── name 001..006 first
    │   │   └── closing 006..007
    │   ├── definition 008..011
    │   ├── alt 012..016 [complete]
    │   │   └── 012..016 Terminal "ok"
    │   └── terminator 016..017
    ├── 018..030 second [partial]
    │   ├── 018..026 lhs <second>
    │   │   ├── name 019..025 second
    │   │   └── closing 025..026
    │   ├── definition 027..030
    │   └── terminator <missing>
    └── 031..038 target [partial]
        ├── 031..038 lhs <target
        │   ├── name 032..038 target
        │   └── closing <missing>
        ├── definition <missing>
        └── terminator <missing>
