crates/bnfgen-syntax/tests/snapshots/lexical_snapshots__fixture_empty.snap
---
source: crates/bnfgen-syntax/tests/lexical_snapshots.rs
---
<input></input>
document
├── tokens
├── errors
└── rules
