crates/bnfgen-syntax/tests/snapshots/lexical_snapshots__fixture_incomplete_alternative.snap
---
source: crates/bnfgen-syntax/tests/lexical_snapshots.rs
---
<input>
<entry> ::= "first" | 3
</input>
document
├── tokens
│   ├── 0..1 LAngle <
│   ├── 1..6 Id entry
│   ├── 6..7 RAngle >
│   ├── 7..8 Whitespace  
│   ├── 8..11 Def ::=
│   ├── 11..12 Whitespace  
│   ├── 12..19 Str "first"
│   ├── 19..20 Whitespace  
│   ├── 20..21 Or |
│   ├── 21..22 Whitespace  
│   ├── 22..23 Int 3
│   └── 23..24 Whitespace
├── diagnostics
│   ├── 23..23 Missing(Symbol)
│   └── 23..23 Missing(RuleTerminator)
├── recovery
└── rules
    └── 0..23 entry partial
        ├── 0..7 lhs complete <entry>
        │   ├── name 1..6 entry
        │   └── closing 6..7
        ├── definition 8..11
        ├── 12..19 alt complete
        │   └── 12..19 Terminal complete "first"
        └── terminator missing
