crates/bnfgen-syntax/tests/snapshots/lexical_snapshots__fixture_incomplete_reference_before_valid_rule.snap
---
source: crates/bnfgen-syntax/tests/lexical_snapshots.rs
---
<input>
<broken> ::= <target;
<good> ::= "ok";
</input>
document
├── tokens
│   ├── 000..001 LAngle <
│   ├── 001..007 Id broken
│   ├── 007..008 RAngle >
│   ├── 008..009 Whitespace  
│   ├── 009..012 Def ::=
│   ├── 012..013 Whitespace  
│   ├── 013..014 LAngle <
│   ├── 014..020 Id target
│   ├── 020..021 Semi ;
│   ├── 021..022 Whitespace
│   ├── 022..023 LAngle <
│   ├── 023..027 Id good
│   ├── 027..028 RAngle >
│   ├── 028..029 Whitespace  
│   ├── 029..032 Def ::=
│   ├── 032..033 Whitespace  
│   ├── 033..037 Str "ok"
│   ├── 037..038 Semi ;
│   └── 038..039 Whitespace
├── errors
│   └── 020..021 UnexpectedToken
├── recovery
│   └── 000..021 <broken> ::= <target;
└── rules
    ├── 000..021 broken
    │   ├── 000..008 lhs <broken>
    │   │   ├── name 001..007 broken
    │   │   └── closing 007..008
    │   ├── definition 009..012
    │   ├── alt 013..020
    │   │   └── 013..020 NonTerminal <target
    │   │       ├── name 014..020 target
    │   │       └── closing <missing>
    │   └── terminator 020..021
    └── 022..038 good
        ├── 022..028 lhs <good>
        │   ├── name 023..027 good
        │   └── closing 027..028
        ├── definition 029..032
        ├── alt 033..037
        │   └── 033..037 Terminal "ok"
        └── terminator 037..038
