crates/bnfgen-syntax/tests/snapshots/lexical_snapshots__fixture_incomplete_regex.snap
---
source: crates/bnfgen-syntax/tests/lexical_snapshots.rs
---
<input>
<entry> ::= re("value"
</input>
document
├── tokens
│   ├── 000..001 LAngle <
│   ├── 001..006 Id entry
│   ├── 006..007 RAngle >
│   ├── 007..008 Whitespace  
│   ├── 008..011 Def ::=
│   ├── 011..012 Whitespace  
│   ├── 012..014 Re re
│   ├── 014..015 LParen (
│   ├── 015..022 Str "value"
│   └── 022..023 Whitespace
├── errors
│   └── 022..022 UnexpectedEof
├── recovery
│   └── 000..022 <entry> ::= re("value"
└── rules
    └── 000..022 entry
        ├── 000..007 lhs <entry>
        │   ├── name 001..006 entry
        │   └── closing 006..007
        ├── definition 008..011
        ├── alt 012..022
        │   └── 012..022 Regex re("value"
        │       ├── opening-parenthesis 014..015
        │       ├── pattern 015..022 "value"
        │       └── closing-parenthesis <missing>
        └── terminator <missing>
